Fix CSS page spacing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,15 +47,13 @@
 .app {
   padding: 2rem 4vw 0 4vw;
   box-sizing: border-box;
-  margin-right: 2rem;
-  margin-left: 2rem;
+  margin: 0 2rem;
 }
 
 @media (max-width: 768px) {
   .app {
     padding: 2rem 6vw 0 6vw;
     box-sizing: border-box;
-    margin-right: 0;
-    margin-left: 0;
+    margin: 0;
   }
 }
