--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 7vw;
-  width: 100vw;
+  width: 100%;
   height: 5.65rem;
 
   background-color: var(--banner-dark);
